# baton-proxy

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
deploy/extmcp/: Dockerfile  Dockerfile.sandbox  RUNBOOK.md  agentgateway.sandbox.yaml  entrypoint.sandbox.sh  smoke_extmcp.py  toy_backend.py
examples/live-claude-invocation/: instructions.md  result.md  setup.sh  unregister.sh
qa-test/: hello.txt  notes.md  single-file.txt
src/baton_proxy/: __init__.py  __main__.py  _llm_text.py  config.py  emitter.py  proxy.py  report.py  scan.py  scan_tasks.py  scrub.py  sinks.py  transport_http.py
src/baton_proxy/extmcp/: __init__.py  ext_mcp.proto  ext_mcp_pb2_grpc.py  gen_protos.sh  intent.py  server.py  servicer.py
tests/: fixture_http_server.py  fixture_responses.py  fixture_server.py  test_a1_emit_e2e.py  test_a1_proxy.py  test_config.py  test_emitter.py  test_extmcp_servicer.py  test_http_bridge.py  test_injection.py  test_intent_param.py  test_llm_text.py  test_pending_eviction.py  test_proxy_env.py  test_report.py  test_residency_sinks.py  test_scan.py  test_scan_tasks.py  test_scrub.py  test_sinks.py  test_surface_snapshot.py
