[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baton-proxy"
version = "0.0.1"
description = "Subprocess-wrap MCP proxy that injects an annotation tool and emits friction events."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Good Timing, Inc." }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
baton-proxy = "baton_proxy.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/baton_proxy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
