[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baton-proxy"
dynamic = ["version"]
description = "Subprocess-wrap MCP proxy that injects an annotation tool and emits friction events."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Good Timing, Inc." }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
baton-proxy = "baton_proxy.__main__:main"
baton-extmcp = "baton_proxy.extmcp.server:main"

[project.optional-dependencies]
# The base package is zero-dep by design (dependencies = [] above). The ExtMCP
# processor is the ONLY part that needs gRPC — gate it behind an extra so
# `pip install baton-proxy` stays zero-dep and `pip install baton-proxy[extmcp]`
# pulls gRPC. grpc imports live only under baton_proxy/extmcp/.
extmcp = ["grpcio>=1.60", "protobuf>=4.25"]
# Data-residency: s3:// event/payload sink (customer-owned bucket). boto3 is
# lazy-imported in S3Sink, so the base package stays zero-dep without it.
s3 = ["boto3>=1.34"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.version]
path = "src/baton_proxy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/baton_proxy"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored, protoc-generated gRPC stubs — never hand-edit (see extmcp/gen_protos.sh).
extend-exclude = ["*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "T20"]
# E501 line-too-long: handled by the formatter for everything it can wrap;
# the residue is long string literals (test fixtures, error bodies) the
# formatter won't break. Mirrors the SDK's ruff config.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# scan.py is a user-facing CLI subcommand; printing to stdout is its job
# (the report headline + progress lines). T20 (no-print) guards library code.
"src/baton_proxy/scan.py" = ["T201"]
# deploy/ holds standalone operational scripts (smoke test, toy backend) run
# from a shell, not library code — printing to stdout is their job.
"deploy/**" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
